[ui] fix the max width to prevent the content from overflowing causing left right to be scrollable

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,6 +6,7 @@ a {
 
 .container {
   padding: 30px;
+  max-width: 864px;
 }
 
 .md-sidenav-left {
